TD-2708: extra brackets in reversal index fields; the xslt to fold the CSS content into the xhtml was getting run twice on the reversal index fields. Also fixed spacing for the .pronunciations class.

--- a/pathway/PsSupport/Styles/Dictionary/epub_Dictionary.css
+++ b/pathway/PsSupport/Styles/Dictionary/epub_Dictionary.css
@@ -119,6 +119,7 @@ padding-right: 5px;
 .revhomographnumber {
     vertical-align: sub;
 }
+.pronunciations,
 .senses {
     margin-left: 0;
     padding-left: 0;
@@ -140,6 +141,7 @@ padding-right: 5px;
     padding-left: 0.5em;
 }
 .definition_L2,
+.pronunciations,
 .sense-complexform-form,
 .pronunciation,
 .pronunciation-minor,
